--- a/style.css
+++ b/style.css
@@ -228,4 +228,14 @@ html {
   line-height: 1.8;
 }
 
+/* MEMBERS PAGE */
+
+.members{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  padding: 15rem;
+}
 
