--- a/style.css
+++ b/style.css
@@ -191,6 +191,27 @@ html {
   padding: 1rem 0;
 }
 
+/* LEARN MORE BTN */
+
+.learnmore{
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-top: 10rem;
+  gap: 1.5rem;
+  padding: 10rem;
+}
+ .learnmore h3{
+    color: #000000;
+    font-size: 4.5rem;
+ }
+ .learnmore p{
+  color: rgb(97, 97, 97);
+  font-size: 1.7rem;
+  line-height: 1.8;
+  padding: 1rem 0;
+ }
+
 /* ABOUT PAGE */
 
 .about .row {
@@ -231,13 +252,55 @@ html {
 /* MEMBERS PAGE */
 
 .members{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 1.5rem;
-  padding: 15rem;
-}
+  padding-top: 10rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
+ }
+ .members .box-container{
+     display: grid;
+     grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+     gap: 2rem;   
+ }
+ .members .box-container .box{
+    text-align: center;
+    background: #fff;
+    border-radius: .5rem;
+    border: var(--border);
+    box-shadow: var(--box-shadow);
+    padding: 2rem;
+ }
+ .members .box-container .box img{
+  height: 20rem;
+  border: var(--border);
+  border-radius: .5rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem
+ }
+ .members .box-container .box h3{
+     color: var(--black);
+     font-size: 2.5rem;
+ }
+ .members .box-container .box span{
+     color: var(--black);
+     font-size: 1.5rem;
+ }
+ .members .box-container .box .share{
+     padding: 2rem;
+ }
+ .members .box-container .box .share a{
+     height: 5rem;
+     width: 5rem;
+     line-height: 4.5rem;
+     font-size: 2rem;
+     color: var(--black);
+     border-radius: .5rem;
+     border: var(--border);
+     margin: .3rem;
+ }
+ .members .box-container .box .share a:hover{
+     background: var(--black);
+     color: #fff;
+ }
 
 /* BOOK PAGE */
 .book{
@@ -441,4 +504,44 @@ html {
   line-height: 1.8;
   padding: 1rem 0;
  }
+
+ /* CONTACT PAGE */
+
+ .contact {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.contact-info-upper-container {
+  display: flex;
+  justify-content: center;
+  border-radius: 2rem;
+  border: #353535 0.1rem solid;
+  border-color: #a3a3a3;
+  background: white;
+  margin: 2rem auto;
+  padding: 0.5rem;
+}
+
+.contact-info-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin: 1rem;
+}
+
+.contact-info-container p {
+  font-size: larger;
+}
+
+.contact-icon  {
+  cursor: default;
+}
+
+
+/* EVENTS PAGE */
+
+
 
